...
    static let inputTextColor = UIColor(red: 0.235, green: 0.235, blue: 0.263, alpha: 1)
    static let inputBackgroundColor = UIColor(red: 0.463, green: 0.463, blue: 0.502, alpha: 0.12).cgColor
    static let inputBorderColor = UIColor(red: 0, green: 0.478, blue: 1, alpha: 1).cgColor
    static let inactiveBorderWidth: CGFloat = 0
    static let activeBorderWidth: CGFloat = 1
    enum Header {
        static let text = "Text Fields"
        static let font = UIFont(name: "Rubik-Medium", size: 34) ?? UIFont.systemFont(ofSize: 34)
        static let textColor = UIColor(red: 0.175, green: 0.175, blue: 0.175, alpha: 1)
    }
    enum NodigitsTitle {
        static let text = "NO digits field"
    }
...
    enum OnlyCharTitle {
        static let text = "Only characters"
    }
    enum OnlyCharInput {
        static let mask = "AAAAA-00000"
        static let placeholder =  NSAttributedString(
            string: "wwwww-ddddd",
            attributes: [NSAttributedString.Key.foregroundColor: UIColor(red: 0.235, green: 0.235, blue: 0.263, alpha: 0.6), NSAttributedString.Key.font: UIFont(name: "Rubik-Regular", size: 17) ?? UIFont.systemFont(ofSize: 17)])
    }
    enum LinkTitle {
        static let text = "Link"
    }
    enum LinkInput {
...
